--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                       </div>     
                        <div class="gatoPerroText-flex">
                             <a href="./templates/perro.html"><img src="./imagenes/perrolavanda.jpg"></a> 
-                            <a class="texto2" href="../templates/perro.html"><h3>Perro</a>
+                            <a class="texto2" href="./templates/perro.html"><h3>Perro</a>
                       </div> 
                        
                 </div>  
